--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                 <h1 class="bothCheck">Both password do not match</h1>
     
                 <div class="psdcheck">
-                    <p class="lengthOfNum red-text-color">password must be greater than 8  digits</p>
-                    <p class="capitalNum red-text-color">A capital letter</p>
-                    <p class="num red-text-color">A number</p>
-                    <p class="lower red-text-color">A lower</p>
+                    <p class="lengthOfNum red-text-color">A password must be greater than <b>8  digits</b></p>
+                    <p class="capitalNum red-text-color">A <b>capital</b> letter</p>
+                    <p class="num red-text-color">A <b>Number</b></p>
+                    <p class="lower red-text-color">A <b>Lowercase </b>letter</p>
                 </div>
                     
                     <button class="to-hideon-pswdVer" type="button">Create Account</button>
                     <p class="log-in to-hideon-pswdVer">Already an existing member? Login <a href="">here.</a> </p>
             </div>
         </div>
+        <div class="image-holder"></div> 
     </div>
 
-        <div class="image-holder"></div> 
         <img src="daleImage/pexels-great.svg" alt="" class="pexels">
     </div>
 </body>
