made image responsive

--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
                 </div>
                     
                     <button class="to-hideon-pswdVer" type="button">Create Account</button>
-                    <p class="log-in to-hideon-pswdVer">Already an existing member? Login <a href="">here.</a> </p>
+                    <p class="log-in to-hideon-pswdVer">Already an existing member? Login <a href="https://rohit-chavhan.github.io/sign-up-form/">here.</a> </p>
+                    <p class="img-credits"><b>Credits</b> Images from pexels.com <br>this website is inspired by <a href="https://aroan-v.github.io/Sign-up-Form/">Aron</a> <br>u can visit eman's landing page <a href="https://rohit-chavhan.github.io/landing-page/">here :) </a></p>
             </div>
         </div>
         <div class="image-holder"></div> 
     </div>
-
-        <img src="daleImage/pexels-great.svg" alt="" class="pexels">
     </div>
 </body>
 </html>
